<resources>
    <string name="app_name" translatable="false"><![CDATA[BSTP]]></string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="please_wait" translatable="false">Please wait...</string>
    <string name="search" translatable="false">Search</string>
    <string name="default_tenant" translatable="false">DHL</string>
    <string name="default_username" translatable="false"></string>
    <string name="default_password" translatable="false"></string>
    <!--<string name="default_username" translatable="false">Juergen-Moeller</string>-->
    <!--<string name="default_password" translatable="false">randomValue12</string>-->
    <string name="save_credentials" translatable="false">Save credentials</string>
    <string name="action_login" translatable="false">Login</string>
    <string name="login_failed" translatable="false">Could not login to system</string>
    <string name="login_failed_with_reason_invalid_role" translatable="false">Could not login to system, because the current user is not a driver</string>
    <string name="login_ok" translatable="false">Login successfully</string>
    <string name="from" translatable="false">From</string>
    <string name="to" translatable="false">To</string>
    <string name="date" translatable="false">Date</string>
    <string name="time" translatable="false">Time</string>
    <string name="home" translatable="false">Home</string>
    <string name="upcoming" translatable="false">Upcoming</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="about" translatable="false"><![CDATA[About]]></string>

    <string name="autocomplete_hint" translatable="false">Enter place name or address</string>
    <string name="your_location" translatable="false">Your location</string>
    <string name="current_search_location" translatable="false">Searching location</string>
    <string name="session_expired" translatable="false">Session expired</string>
    <string name="re_login_ok" translatable="false">Session has been renewed</string>
    <string name="re_login_failed" translatable="false">Re-Login failed</string>

    <string name="action_reserve" translatable="false">Reserve</string>
    <string name="security_level" translatable="false">Security Level:</string>
    <string name="free" translatable="false">free</string>
    <string name="title_activity_upcoming" translatable="false">Upcoming</string>

    <string name="title_activity_reservation" translatable="false">Reservation</string>
    <string name="route_to_location" translatable="false">Route to location</string>
    <string name="title_activity_about" translatable="false"><![CDATA[About]]></string>
    <string name="cancel_reservation" translatable="false">Cancel reservation</string>
    <string name="title_confirm_reservation_activity_about" translatable="false">Confirm</string>
    <string name="start_time" translatable="false">Start Time</string>
    <string name="end_time" translatable="false">End Time</string>
    <string name="parking" translatable="false">Parking</string>
    <string name="address" translatable="false">Address</string>
    <string name="Driver" translatable="false">Driver</string>
    <string name="Truck" translatable="false">Truck</string>
    <string name="Cancel" translatable="false">Cancel</string>
    <string name="Confirm" translatable="false">Confirm</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="bstp_app" translatable="false">bstp app</string>
    <string name="reserved_successfully" translatable="false">Successfully reserved the parking space!</string>
    <string name="reserved_unsuccessfully" translatable="false">Unable to reserve parking space!</string>
    <string name="unable_to_get_driver_details" translatable="false">Unable to get driver details</string>
    <string name="reservation_canceled_successfully" translatable="false">Successfully canceled the reservation</string>
    <string name="reservation_canceled_unsuccessfully" translatable="false">Failed to cancel the reservation</string>
    <string name="service_error_message" translatable="false">Unfortunately, the service is currently unavailable</string>

    <string name="datetime_format" translatable="false">yyyy-MM-dd / kk:mm</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="time_format" translatable="false">kk:mm</string>
    <string name="message" translatable="false">Message</string>
    <string name="no_parking_location_found" translatable="false">No parking location found</string>
    <string name="request_timeout_message" translatable="false">Sorry, the service was not available due to slow connection</string>
    <string name="cancel_reservation_confirm_message" translatable="false">Do you want to cancel this reservation?</string>
    <string name="restful_service_error_message">Sorry, the service was not available.</string>
    <string name="username_empty" translatable="false">Username is empty</string>
    <string name="password_empty" translatable="false">Password is empty</string>

</resources>
