<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white_opacity_50"
    android:visibility="visible">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="@dimen/log_width"
        android:layout_height="@dimen/log_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@drawable/bosch_logo" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/username"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/default_username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxSaveCredentials"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/password"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/default_password" />

    <CheckBox
        android:id="@+id/checkBoxSaveCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:checked="true"
        android:drawablePadding="50dp"
        android:singleLine="true"
        android:text="@string/save_credentials" />

    <Button
        android:id="@+id/loginButton"
        style="@style/App_ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:onClick="onLoginButtonClicked"
        android:text="@string/action_login" />

</RelativeLayout>