<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_search_panel_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/no_padding"
    android:visibility="visible">

    <AutoCompleteTextView
        android:id="@+id/editTextSearch"
        style="@style/App_EditTextDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autocomplete_hint"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/imageButtonClear"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_close" />

    <TextView
        android:id="@+id/textViewFrom"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="@dimen/date_label_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSearch"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/from" />

    <TextView
        android:id="@+id/textViewFromDate"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearch"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewFrom"
        android:singleLine="true"
        android:text="@string/date_format"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewFromSeparator"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearch"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewFromDate"
        android:singleLine="true"
        android:text="/"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewFromTime"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSearch"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewFromSeparator"
        android:singleLine="true"
        android:text="@string/time_format"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewTo"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="@dimen/date_label_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFrom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/to" />

    <TextView
        android:id="@+id/textViewToDate"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFrom"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewTo"
        android:singleLine="true"
        android:text="@string/date_format"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewToSeparator"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFrom"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewToDate"
        android:singleLine="true"
        android:text="/"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewToTime"
        style="@style/App_TextViewDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFrom"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/textViewToSeparator"
        android:singleLine="true"
        android:text="@string/time_format"
        android:textAlignment="center" />

</RelativeLayout>