<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewHeader"
    android:layout_width="match_parent"
    android:layout_height="@dimen/detail_view_header_height"
    android:layout_alignParentBottom="true"
    android:background="@color/detail_header_bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageViewParkingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/booking_green" />

    <TextView
        android:id="@+id/textViewAvailability"
        style="@style/App_TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/imageViewParkingIcon"
        android:text="20/24" />

    <TextView
        android:id="@+id/textViewFreeLabel"
        style="@style/App_TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/textViewAvailability"
        android:text="@string/free" />

    <TextView
        android:id="@+id/textViewParkingName"
        style="@style/App_TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAvailability"
        android:layout_alignStart="@+id/textViewAvailability"
        android:layout_below="@+id/textViewAvailability"
        android:text="Autohof Lutterberg" />

    <TextView
        android:id="@+id/textViewParkingAddress"
        style="@style/App_TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/textViewParkingName"
        android:layout_alignStart="@+id/textViewParkingName"
        android:layout_below="@+id/textViewParkingName"
        android:maxLines="2"
        android:text="Parking location address or description" />


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewParkingAddress"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/securityLevelContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSecurityLevelLabel"
                style="@style/App_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:text="@string/security_level" />

            <TextView
                android:id="@+id/textViewSecurityLevel"
                style="@style/App_TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/textViewSecurityLevelLabel"
                android:padding="5dp"
                android:text="3" />

        </LinearLayout>

        <Button
            android:id="@+id/reserveButton"
            style="@style/App_ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onReserveButtonClicked"
            android:text="@string/action_reserve" />

    </RelativeLayout>

</RelativeLayout>